...
                  setState(() => weightGrams = int.parse(newText));
                  _debouncedSaveMetadata();
                },
                keyboardType: TextInputType.number,
                decoration: const InputDecoration(
                  icon: Icon(Icons.scale),
                  labelText: 'Weight in grams',
                ),
              ),
              DropdownButtonFormField<rust.ItemState>(
                decoration: const InputDecoration(
                    icon: Icon(Icons.diamond), labelText: 'Book state'),
                value: itemState,
                items: rust.ItemState.values
                    .map((s) => DropdownMenuItem(value: s, child: Text(s.loc)))
                    .toList(),
                onChanged: (state) {
                  setState(() {
...
