...
    });
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('ISBN decoding')),
      body: FutureWidget(
        future: isbnManager,
        builder: (isbnManager) => LayoutBuilder(
          builder: (BuildContext context, BoxConstraints constraints) => Flex(
            direction:
                constraints.maxWidth > 600 ? Axis.horizontal : Axis.vertical,
...
